<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:orientation="vertical"
              android:gravity="top"
              tools:context=".MainActivity"
              tools:ignore="Orientation">

    <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/etykieta_szukaj"
            android:id="@+id/button_szukaj"/>

    <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/etykieta_rozklad_autobusow"
            android:id="@+id/button_rozklad_autobusow" />

    <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/etykieta_rozklad_przystankow"
            android:id="@+id/button_rozklad_przystankow" />
    <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/etykieta_mapa"
            android:id="@+id/button_mapa" />
    <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/etykieta_bilet"
            android:id="@+id/button_bilet" />
    <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/etykieta_ustawienia"
            android:id="@+id/button_ustawienia" />
    <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/etykieta_kontakt"
            android:id="@+id/button_kontakt" />
    <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/etykieta_wyjscie"
            android:id="@+id/button_wyjscie" />

</LinearLayout>